--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -37,6 +37,7 @@ h3 {
 
 img {
     height: 100px;
+    border: 1px black solid;
 }
 
 .yt-result {
@@ -48,22 +49,42 @@ img {
     display: flex;
 }
 
-    .input-container > * {
-        padding: 10px;
-    }
+.input-container > * {
+    padding: 10px;
+}
 
-    .input-container > input {
-        width: 100%;
-        max-width: 500px;
-    }
+.input-container > input {
+    width: 100%;
+    max-width: 500px;
+}
 
-    .input-container > button {
-        flex-grow: 1;
-        max-width: 200px;
-    }
+.input-container > button {
+    flex-grow: 1;
+    max-width: 200px;
+}
 
 progress {
     width: 100%;
     height: 40px;
     border-radius: 0;
+}
+
+@media only screen and (max-width: 1000px) {
+  body {
+      flex-direction: column;
+  }
+
+  #main {
+      width: 100%;
+  }
+
+  #search {
+      width: 100%;
+  }
+}
+
+
+input, button, select  {
+    margin: 5px;
+    font-family: inherit;
 }
